--- a/detail.html
+++ b/detail.html
@@ -50,6 +50,75 @@
 	<div class='container'>
 		<div class='row single-product'>
 			<div class='col-xs-12 col-sm-12 col-md-3 sidebar'>
+        <div class="side-menu animate-dropdown outer-bottom-xs">
+          <div class="head"><i class="icon fa fa-align-justify fa-fw"></i> Kategori</div>
+          <nav class="yamm megamenu-horizontal">
+            <ul class="nav">
+              <li class="dropdown menu-item"> 
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon fa fa-laptop" aria-hidden="true"></i>Menu Makanan</a>
+                <ul class="dropdown-menu mega-menu">
+                  <li class="yamm-content">
+                    <div class="row">
+                      <div class="col-xs-12 col-sm-12 col-lg-4">
+                        <ul>
+                          <li><a href="#">Nasi Bebek Bumbu Hitam</a></li>
+                          <li><a href="#">Nasi Bebek Bumbu Kriuk</a></li>
+                          <li><a href="#">Bebek Bumbu Hitam</a></li>
+                          <li><a href="#">Bebek Bumbu Kriuk</a></li>
+                          <li><a href="#">Nasi Pecel</a></li>
+                          <li><a href="#">Microsoft</a></li>
+                          <li><a href="#">Asus</a></li>
+                          <li><a href="#">Adapters</a></li>
+                          <li><a href="#">Batteries</a></li>
+                          <li><a href="#">Cooling Pads</a></li>
+                        </ul>
+                      </div>
+                      <div class="dropdown-banner-holder"> <a href="#"><img alt="" src="assets/images/banners/banner-side.png" /></a> </div>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+              <li class="dropdown menu-item">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon fa fa-clock-o"></i>Menu Minuman</a>
+                <ul class="dropdown-menu mega-menu">
+                  <li class="yamm-content">
+                    <div class="row">
+                      <div class="col-xs-12 col-sm-12 col-lg-4">
+                        <ul>
+                          <li><a href="#">Gaming</a></li>
+                          <li><a href="#">Laptop Skins</a></li>
+                          <li><a href="#">Apple</a></li>
+                          <li><a href="#">Dell</a></li>
+                          <li><a href="#">Lenovo</a></li>
+                          <li><a href="#">Microsoft</a></li>
+                          <li><a href="#">Asus</a></li>
+                          <li><a href="#">Adapters</a></li>
+                          <li><a href="#">Batteries</a></li>
+                          <li><a href="#">Cooling Pads</a></li>
+                        </ul>
+                      </div>
+                      <div class="col-xs-12 col-sm-12 col-lg-4">
+                        <ul>
+                          <li><a href="#">Gaming</a></li>
+                          <li><a href="#">Laptop Skins</a></li>
+                          <li><a href="#">Apple</a></li>
+                          <li><a href="#">Dell</a></li>
+                          <li><a href="#">Lenovo</a></li>
+                          <li><a href="#">Microsoft</a></li>
+                          <li><a href="#">Asus</a></li>
+                          <li><a href="#">Adapters</a></li>
+                          <li><a href="#">Batteries</a></li>
+                          <li><a href="#">Cooling Pads</a></li>
+                        </ul>
+                      </div>
+                      <div class="dropdown-banner-holder"> <a href="#"><img alt="" src="assets/images/banners/banner-side.png" /></a> </div>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+            </ul> 
+          </nav>
+        </div>
 				<div class="sidebar-module-container">
 				<div class="home-banner outer-top-n outer-bottom-xs">
         </div>			
@@ -85,8 +154,8 @@
 
         <div id="owl-single-product">
             <div class="single-product-gallery-item" id="slide1">
-                <a data-lightbox="image-1" data-title="Gallery" href="assets/images/products/p1.jpg">
-                    <img class="img-responsive" alt="" src="assets/images/blank.gif" data-echo="assets/images/products/p1.jpg" />
+                <a data-lightbox="image-1" data-title="Gallery" href="assets/images/menu-makanan/bebek bumbu hitam.jpg">
+                    <img class="img-responsive" alt="" src="assets/images/blank.gif" data-echo="assets/images/menu-makanan/bebek bumbu hitam.jpg" />
                 </a>
             </div>
             <div class="single-product-gallery-item" id="slide2">
