--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                       <div class="col-xs-12 col-sm-12 col-lg-4">
                         <ul>
                           <li><a href="menu-makanan/detail-nasi-bebek-bumbu-hitam-d2n3b4.html">Nasi Bebek Bumbu Hitam</a></li>
-                          <li><a href="#">Nasi Bebek Bumbu Kriuk</a></li>
-                          <li><a href="#">Bebek Bumbu Hitam</a></li>
-                          <li><a href="#">Bebek Bumbu Kriuk</a></li>
+                          <li><a href="menu-makanan/detail-nasi-bebek-bumbu-kriuk-h8q6b9.html">Nasi Bebek Bumbu Kriuk</a></li>
+                          <li><a href="menu-makanan/detail-bebek-bumbu-hitam-f8k5l1.html">Bebek Bumbu Hitam</a></li>
+                          <li><a href="menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html">Bebek Bumbu Kriuk</a></li>
                           <li><a href="#">Nasi Pecel</a></li>
                         </ul>
                       </div>
@@ -152,7 +152,7 @@
                       Ini deskripsi
                     </div>
                     <div class="product-price">
-                      <span class="price"> Rp20,000 </span>
+                      <span class="price"> Rp24,000 </span>
                     </div>
                   </div>
                 </div>
@@ -163,7 +163,7 @@
                 <div class="product">
                   <div class="product-image">
                     <div class="image"> 
-                      <a href="detail.html">
+                      <a href="menu-makanan/detail-nasi-bebek-bumbu-kriuk-h8q6b9.html">
                           <img src="assets/images/menu-makanan/nasi bebek bumbu hitam.jpg" alt=""> 
                           <img src="assets/images/products/p10_hover.jpg" alt="" class="hover-image">
                       </a>
@@ -171,7 +171,31 @@
                     <div class="tag hot"><span>hot</span></div>
                   </div>
                   <div class="product-info text-left">
-                    <h3 class="name"><a href="detail.html">Nasi Bebek Bumbu Kriuk</a></h3>
+                    <h3 class="name"><a href="menu-makanan/detail-nasi-bebek-bumbu-kriuk-h8q6b9.html">Nasi Bebek Bumbu Kriuk</a></h3>
+                    <div class="description">
+                      Ini deskripsi
+                    </div>
+                    <div class="product-price">
+                      <span class="price"> Rp24,000 </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item item-carousel">
+              <div class="products">
+                <div class="product">
+                  <div class="product-image">
+                    <div class="image"> 
+                      <a href="menu-makanan/detail-bebek-bumbu-hitam-f8k5l1.html">
+                          <img src="assets/images/menu-makanan/bebek bumbu hitam.jpg" alt=""> 
+                          <img src="assets/images/products/p10_hover.jpg" alt="" class="hover-image">
+                      </a>
+                    </div>
+                    <div class="tag hot"><span>hot</span></div>
+                  </div>
+                  <div class="product-info text-left">
+                    <h3 class="name"><a href="menu-makanan/detail-bebek-bumbu-hitam-f8k5l1.html">Bebek Bumbu Hitam</a></h3>
                     <div class="description">
                       Ini deskripsi
                     </div>
@@ -187,39 +211,15 @@
                 <div class="product">
                   <div class="product-image">
                     <div class="image"> 
-                      <a href="detail.html">
-                          <img src="assets/images/menu-makanan/nasi bebek bumbu hitam.jpg" alt=""> 
+                      <a href="menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html">
+                          <img src="assets/images/menu-makanan/bebek bumbu kriuk.jpg" alt=""> 
                           <img src="assets/images/products/p10_hover.jpg" alt="" class="hover-image">
                       </a>
                     </div>
                     <div class="tag hot"><span>hot</span></div>
                   </div>
                   <div class="product-info text-left">
-                    <h3 class="name"><a href="detail.html">Nasi Bebek Bumbu Hitam</a></h3>
-                    <div class="description">
-                      Ini deskripsi
-                    </div>
-                    <div class="product-price">
-                      <span class="price"> Rp20,000 </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item item-carousel">
-              <div class="products">
-                <div class="product">
-                  <div class="product-image">
-                    <div class="image"> 
-                      <a href="detail.html">
-                          <img src="assets/images/menu-makanan/nasi bebek bumbu hitam.jpg" alt=""> 
-                          <img src="assets/images/products/p10_hover.jpg" alt="" class="hover-image">
-                      </a>
-                    </div>
-                    <div class="tag hot"><span>hot</span></div>
-                  </div>
-                  <div class="product-info text-left">
-                    <h3 class="name"><a href="detail.html">Nasi Bebek Bumbu Hitam</a></h3>
+                    <h3 class="name"><a href="menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html">Bebek Bumbu Kriuk</a></h3>
                     <div class="description">
                       Ini deskripsi
                     </div>
