--- a/menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html
+++ b/menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html
@@ -112,23 +112,23 @@
                 <div class="product-item-holder size-big single-product-gallery small-gallery">
                     <div id="owl-single-product">
                         <div class="single-product-gallery-item" id="slide1">
-                          <a data-lightbox="image-1" data-title="Gallery" href="../assets/images/menu-makanan/nasi bebek bumbu hitam.jpg">
-                              <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/nasi bebek bumbu hitam.jpg" />
+                          <a data-lightbox="image-1" data-title="Gallery" href="../assets/images/menu-makanan/bebek bumbu kriuk.jpg">
+                              <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/bebek bumbu kriuk.jpg" />
                           </a>
                         </div>
                         <div class="single-product-gallery-item" id="slide2">
-                            <a data-lightbox="image-1" data-title="Gallery" href="../assets/images/menu-makanan/nasi bebek bumbu kriuk.jpg">
-                                <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/nasi bebek bumbu hitam.jpg" />
+                            <a data-lightbox="image-1" data-title="Gallery" href="../assets/images/menu-makanan/bebek bumbu kriuk.jpg">
+                                <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/bebek bumbu kriuk.jpg" />
                             </a>
                         </div>
                         <div class="single-product-gallery-item" id="slide3">
-                            <a data-lightbox="image-1" data-title="Gallery" href="../assets/images/menu-makanan/nasi bebek bumbu hitam.jpg">
-                                <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/nasi bebek bumbu hitam.jpg" />
+                            <a data-lightbox="image-1" data-title="Gallery" href="../assets/images/menu-makanan/bebek bumbu kriuk.jpg">
+                                <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/bebek bumbu kriuk.jpg" />
                             </a>
                         </div>
                         <div class="single-product-gallery-item" id="slide4">
-                            <a data-lightbox="image-1" data-title="Gallery" href="../assets/images/menu-makanan/nasi bebek bumbu hitam.jpg">
-                                <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/nasi bebek bumbu hitam.jpg" />
+                            <a data-lightbox="image-1" data-title="Gallery" href="../assets/images/menu-makanan/bebek bumbu kriuk.jpg">
+                                <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/bebek bumbu kriuk.jpg" />
                             </a>
                         </div>
                     </div>
@@ -136,24 +136,24 @@
                         <div id="owl-single-product-thumbnails">
                             <div class="item">
                                 <a class="horizontal-thumb active" data-target="#owl-single-product" data-slide="1" href="#slide1">
-                                    <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/nasi bebek bumbu hitam.jpg" />
+                                    <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/bebek bumbu kriuk.jpg" />
                                 </a>
                             </div>
 
                             <div class="item">
                                 <a class="horizontal-thumb" data-target="#owl-single-product" data-slide="2" href="#slide2">
-                                    <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/nasi bebek bumbu hitam.jpg"/>
+                                    <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/bebek bumbu kriuk.jpg"/>
                                 </a>
                             </div>
                             <div class="item">
 
                                 <a class="horizontal-thumb" data-target="#owl-single-product" data-slide="3" href="#slide3">
-                                    <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/nasi bebek bumbu hitam.jpg" />
+                                    <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/bebek bumbu kriuk.jpg" />
                                 </a>
                             </div>
                             <div class="item">
                                 <a class="horizontal-thumb" data-target="#owl-single-product" data-slide="4" href="#slide4">
-                                    <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/nasi bebek bumbu hitam.jpg" />
+                                    <img class="img-responsive" alt="" src="../assets/images/blank.gif" data-echo="../assets/images/menu-makanan/bebek bumbu kriuk.jpg" />
                                 </a>
                             </div>
                         </div>
@@ -162,7 +162,7 @@
               </div>   			
               <div class='col-sm-12 col-md-8 col-lg-8 product-info-block'>
                 <div class="product-info">
-                  <h1 class="name">Nasi Bebek Bumbu Hitam</h1>
+                  <h1 class="name">Bebek Bumbu Kriuk</h1>
                   <div class="stock-container info-container m-t-10">
                     <div class="row">
                       <div class="col-lg-12">
