--- a/menu-makanan/detail-nasi-bebek-bumbu-kriuk-h8q6b9.html
+++ b/menu-makanan/detail-nasi-bebek-bumbu-kriuk-h8q6b9.html
@@ -162,7 +162,7 @@
               </div>   			
               <div class='col-sm-12 col-md-8 col-lg-8 product-info-block'>
                 <div class="product-info">
-                  <h1 class="name">Nasi Bebek Bumbu Hitam</h1>
+                  <h1 class="name">Nasi Bebek Bumbu Kriuk</h1>
                   <div class="stock-container info-container m-t-10">
                     <div class="row">
                       <div class="col-lg-12">
