--- a/menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html
+++ b/menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html
@@ -54,10 +54,10 @@
                           <ul>
                             <li><a href="#">1. Bebek Bumbu Madura (1 Ekor Bebek)</a></li>
                             <li><a href="#">2. Bebek Kriuk (1 Ekor Bebek)</a></li>
-                            <li><a href="menu-makanan/detail-nasi-bebek-bumbu-hitam-d2n3b4.html">3. Nasi Bebek Bumbu Hitam</a></li>
-                            <li><a href="menu-makanan/detail-nasi-bebek-bumbu-kriuk-h8q6b9.html">4. Nasi Bebek Bumbu Kriuk</a></li>
-                            <li><a href="menu-makanan/detail-bebek-bumbu-hitam-f8k5l1.html">5. Bebek Bumbu Hitam</a></li>
-                            <li><a href="menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html">6. Bebek Bumbu Kriuk</a></li>
+                            <li><a href="detail-nasi-bebek-bumbu-hitam-d2n3b4.html">3. Nasi Bebek Bumbu Hitam</a></li>
+                            <li><a href="detail-nasi-bebek-bumbu-kriuk-h8q6b9.html">4. Nasi Bebek Bumbu Kriuk</a></li>
+                            <li><a href="detail-bebek-bumbu-hitam-f8k5l1.html">5. Bebek Bumbu Hitam</a></li>
+                            <li><a href="detail-bebek-bumbu-kriuk-d7g4y0.html">6. Bebek Bumbu Kriuk</a></li>
                           </ul>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-lg-4">
@@ -214,7 +214,7 @@
                   <div class="quantity-container info-container">
                     <div class="row">
                       <div class="add-btn">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-shopping-cart inner-right-vs"></i> Pesan</a>
+                        <a href="#" class="btn btn-primary" style="color: white;"><i class="fa fa-whatsapp inner-right-vs"></i> Pesan</a>
                       </div>
                     </div>
                   </div>
