--- a/menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html
+++ b/menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html
@@ -42,11 +42,11 @@
       <div class='row single-product'>
         <div class='col-xs-12 col-sm-12 col-md-3 sidebar'>
           <div class="side-menu animate-dropdown outer-bottom-xs">
-            <div class="head"><i class="icon fa fa-align-justify fa-fw"></i> Kategori</div>
+            <div class="head">Bebek Tulen Cak Noer</div>
             <nav class="yamm megamenu-horizontal">
               <ul class="nav">
                 <li class="dropdown menu-item"> 
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon fa fa-laptop" aria-hidden="true"></i>Menu Makanan</a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon fa fa-align-justify" aria-hidden="true"></i>Menu Makanan</a>
                   <ul class="dropdown-menu mega-menu">
                     <li class="yamm-content">
                       <div class="row">
@@ -85,7 +85,7 @@
                   </ul>
                 </li>
                 <li class="dropdown menu-item">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon fa fa-clock-o"></i>Menu Minuman</a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon fa fa-align-justify"></i>Menu Minuman</a>
                   <ul class="dropdown-menu mega-menu">
                     <li class="yamm-content">
                       <div class="row">
