Update link  lagi

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="col-xs-12 col-sm-12 col-md-3 sidebar"> 
         <div class="side-menu animate-dropdown outer-bottom-xs">
           <!-- <div class="head"><i class="icon fa fa-align-justify fa-fw"></i>Kategori</div> -->
-          <div class="head">Bebek Tulen Cak Noer</div>
+          <a href="index.html"><div class="head">Bebek Tulen Cak Noer</div></a>
           <nav class="yamm megamenu-horizontal">
             <ul class="nav">
               <li class="dropdown menu-item"> 
